fix: add overflow-x to code blocks

--- a/css/_content.css
+++ b/css/_content.css
@@ -135,6 +135,7 @@
   }
 
   pre {
+    @extend .pre;
     @extend .w-100;
     @extend .bw3;
     @extend .bl;
